# tnnx

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  llms.txt  pyproject.toml
.agents/templates/: checklist.md  handoff.md
.github/workflows/: ci.yml
docs/: README.md  architecture.md  demo-runbook.md  model_support.md  operators.md  roadmap.md  testing.md
docs/llm_context/: README.md  SCHEMA.md  architecture.md  backends_jax_mlx.md  code_index.json  context_pack_lint.md  dataflow.md  decisions.md  extension_guide.md  graph_edges.tsv  index.md  known_limits.md  log.md  model_zoo.md  operators.md  public_api_cli.md  symbol_index.jsonl  validation.md
examples/: README.md  __init__.py  common.py  model_conv.py  model_mlp.py  model_nanogpt_tiny.py  model_residual.py  model_whisper_tiny.py  run_flux_jax.py  run_nanogpt_tiny_jax.py  run_whisper_tiny_mlx.py
examples/flux/: README.md  __init__.py  jax_backend_notes.md  required_models.md  runtime_env.py  snapshot_setup.md  source.py  submodule_plan.md  transpile_and_generate_jax.py
examples/model_zoo/: README.md  __init__.py  catalog.py  check_compatibility.py  compatibility.py  list_models.py  loaders.py  smoke.py  transpile_smoke.py
examples/nanogpt/: README.md  __init__.py  infer_gpt2_from_transformers_jax.py  train_nanogpt_tiny.py  utils.py
examples/qwen/: README.md  __init__.py  infer_qwen3_5_from_transformers_jax.py  infer_qwen3_5_from_transformers_mlx.py
examples/whisper_audio/: README.md  runtime_env.py  transcribe_with_mlx_whisper.py  transpile_and_transcribe.py  whisper_hf_tiny_source.py
scripts/: check.sh  check_context_pack.py  check_docs_links.py  check_generated_code.py  check_operator_docs.py  check_package_contents.py  check_residue.py
scripts/research/: adaptfm_cases.py  adaptfm_evidence.py  check_anonymity.py  deterministic_artifacts.py  hot_model_benchmarks.py  jax_metal_runtime_probe.py  pass_ablation.py  qwen_error_probe.py  tnnx_evidence.py  validate_equivalence.py
src/tnnx/: __init__.py  api.py  cli.py  config.py
tests/: __init__.py  conftest.py
tests/_support/: __init__.py  flux.py
tests/integration/: test_cli_transpile_custom_artifacts.py  test_cli_transpile_jax.py  test_cli_transpile_mlx.py  test_deterministic_artifacts.py  test_examples_export_cli.py  test_extended_ops_runtime_parity.py  test_flux_fp8_jax_runtime_parity.py  test_flux_jax_cli_prompt_npz.py  test_flux_jax_dummy_flux2_smoke.py  test_flux_jax_image_smoke.py  test_flux_jax_prompt_injection.py  test_flux_jax_prompt_to_image_smoke.py  test_flux_prompt_to_image_jax_e2e.py  test_flux_pytorch_dummy_flux2_smoke.py  test_flux_pytorch_prompt_to_image_smoke.py  test_flux_reduced_checkpoint_bridge_jax.py  test_flux_text_encoder_checkpoint_runtime.py  test_flux_text_encoder_checkpoint_transpile.py  test_flux_text_encoder_jax_parity.py  test_flux_text_encoder_source.py  test_flux_tiny_config_e2e_jax.py  test_flux_tiny_config_e2e_torch.py  test_flux_transformer_checkpoint_runtime.py  test_jax_parity_conv.py  (+34 more)
(+94 files in other folders)
