[project]
name = "tnnx"
version = "0.1.0"
description = "A minimal ONNX-based transpiler targeting JAX and MLX."
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "numpy>=2.1.0",
    "onnx>=1.18.0",
]

[project.scripts]
tnnx = "tnnx.cli:main"

[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = ["/.local", "/.uv-cache", "/.venv", "/generated"]

[dependency-groups]
dev = [
    "jax>=0.8.0",
    "jaxlib>=0.8.0",
    "mlx>=0.30.0",
    "pre-commit>=4.2.0",
    "pytest-env>=1.2.0",
    "pytest>=8.3.0",
    "ruff>=0.12.0",
    "timm>=1.0.20",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.56.0",
    "ty>=0.0.1",
    "ultralytics>=8.3.0",
]
examples = [
    "accelerate>=1.10.0",
    "diffusers>=0.35.0",
    "onnxscript>=0.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pytest_env]
RUN_MLX_E2E = "1"

[tool.ruff]
line-length = 100
target-version = "py314"
extend-exclude = ["tests/snapshots/expected"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
