[project]
name = "tnnx"
version = "0.1.0"
description = "A minimal ONNX-based transpiler targeting JAX and MLX."
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "numpy>=2.1.0",
    "onnx>=1.18.0",
]

[project.scripts]
tnnx = "tnnx.cli:main"

[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.agents",
    "/.codex",
    "/.github",
    "/.local",
    "/.uv-cache",
    "/.venv",
    "/dist",
    "/docs/llm_context",
    "/examples",
    "/examples/**",
    "/generated",
    "/scripts",
    "/scripts/**",
    "/tests",
    "/tests/**",
]

[dependency-groups]
dev = [
    "accelerate>=1.10.0",
    "diffusers>=0.35.0",
    "jax>=0.8.0",
    "jaxlib>=0.8.0",
    "mlx>=0.30.0",
    "onnxscript>=0.2.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.0",
    "ruff>=0.12.0",
    "timm>=1.0.20",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.56.0",
    "ty>=0.0.1",
    "ultralytics>=8.3.0",
]
examples = [
    "accelerate>=1.10.0",
    "diffusers>=0.35.0",
    "onnxscript>=0.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "expensive: checkpoint, model-zoo, or runtime path that may take materially longer than unit tests",
    "ffmpeg: test exercises the real ffmpeg audio boundary",
    "flux: FLUX model family gate",
    "mlx: MLX backend/runtime gate",
    "network: gate may require a cached or downloadable upstream artifact when explicitly enabled",
    "qwen: Qwen model family gate",
    "snapshot: gate requires a local model snapshot or cached checkpoint assets",
]

[tool.ruff]
line-length = 100
target-version = "py314"
extend-exclude = ["tests/snapshots/expected"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
